dhall/tests/type-errors/unit/NaturalSubtractNotNatural.txt
Type error: Unhandled error: error: function annot mismatch
 --> <current file>:1:0
  |
1 | Natural/subtract True True
  | ^^^^^^^^^^^^^^^^^^^^^ function annot mismatch
  | ---------------- help: this expects an argument of type: Natural
  |                  ---- help: but this has type: Bool
  |
